@@ -2,6 +2,8 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2015, PHP 5.5.24
 
+- Core:
+  . Fixed bug #68917 (parse_url fails on some partial urls). (Wei Dai)
 
 19 Mar 2015, PHP 5.5.23
 
